[package]
authors = ["theduke <chris@theduke.at>"]
name = "display_derive"
version = "0.1.0"
repository = "https://github.com/theduke/display_derive"
documentation = "https://docs.rs/display_derive"
keywords = ["derive", "display"]

[lib]
proc-macro = true

[dependencies]
quote = "0.3.15"
syn = "0.11.11"
